Newhome : horizontal scroll problem fixed

--- a/client/landing/stylus/app.home.styl
+++ b/client/landing/stylus/app.home.styl
@@ -725,6 +725,9 @@ div.featured-app-details
   display           none
 
 #kdmaincontainer.home
+  #main-tab-handle-holder
+    display                 none
+
   >header
     size                    100%, 100px
     top                     0
